# jsonrpC

./: .gitignore  CMakeLists.txt  Makefile  README.md  index.html  params.json
example/: CMakeLists.txt  test.c  test_websocket.c  test_websocket.html
plugins/: jsonrpc_plugin_websockets.c  jsonrpc_plugin_websockets.h  jsonrpc_plugin_yajl.c  jsonrpc_plugin_yajl.h
src/: CMakeLists.txt  jsonrpc.h  jsonrpc_client.c  jsonrpc_config.h.in  jsonrpc_macro.h  jsonrpc_memory.c  jsonrpc_memory.h  jsonrpc_mstream.c  jsonrpc_mstream.h  jsonrpc_server.c
