
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(jsonrpC)

SET (JSONRPC_VERSION_MAJOR 0)
SET (JSONRPC_VERSION_MINOR 1)

SET (JSONRPC_DIST_NAME "jsonrpc-${JSONRPC_VERSION_MAJOR}.${JSONRPC_VERSION_MINOR}")

IF (NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "Release")
ENDIF (NOT CMAKE_BUILD_TYPE)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -W -Wall")
SET(CMAKE_C_FLAGS_DEBUG "-DDEBUG -g")
SET(CMAKE_C_FLAGS_RELEASE "-DNDEBUG -O2")

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(example)
