

SET (SRCS 
		test_websocket.c
		../plugins/jsonrpc_plugin_yajl.c
)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/../${JSONRPC_DIST_NAME}/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/../${JSONRPC_DIST_NAME}/include)
LINK_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/../${JSONRPC_DIST_NAME}/lib)

FIND_LIBRARY (YAJL_LIBRARY NAMES yajl)
FIND_PATH (YAJL_INCLUDE_DIR yajl/yajl_tree.h)
INCLUDE (FindPackageHandleStandardArgs)
FIND_PACKAGE_HANDLE_STANDARD_ARGS(yajl DEFAULT_MSG YAJL_LIBRARY YAJL_INCLUDE_DIR)

FIND_LIBRARY (WEBSOCKETS_LIBRARY NAMES websockets)
FIND_PATH (WEBSOCKETS_INCLUDE_DIR libwebsockets.h)
INCLUDE (FindPackageHandleStandardArgs)
FIND_PACKAGE_HANDLE_STANDARD_ARGS(websockets DEFAULT_MSG WEBSOCKETS_LIBRARY WEBSOCKETS_INCLUDE_DIR)

SET(LIBS ${LIBS} ${WEBSOCKSETS_LIBRARIES})
SET(LIBS ${LIBS} ${YAJL_LIBRARIES})
SET(LIBS ${LIBS} m)

SET(LIBS ${LIBS} jsonrpc_s)

ADD_EXECUTABLE(jsonrpc_ws ${SRCS})

TARGET_LINK_LIBRARIES(jsonrpc_ws jsonrpc_s m ${YAJL_LIBRARY} ${WEBSOCKETS_LIBRARY})
